fix，config手动刷新还有问题

--- a/springcloud-chapter-6/config-client/pom.xml
+++ b/springcloud-chapter-6/config-client/pom.xml
@@ -32,6 +32,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
+        <!-- 配置内容的手动刷新 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
