--- a/springcloud-chapter-5/pom.xml
+++ b/springcloud-chapter-5/pom.xml
@@ -64,6 +64,7 @@
         <module>eureka-client</module>
         <module>service-feign</module>
         <module>service-ribbon</module>
+        <module>service-zuul</module>
     </modules>
 
 </project>
